--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,28 +21,28 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextNumberSigned"
+                android:id="@+id/ed1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="numberSigned" />
+                android:inputType="numberDecimal|numberSigned" />
 
             <EditText
-                android:id="@+id/editTextNumberSigned2"
+                android:id="@+id/ed2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="numberSigned" />
+                android:inputType="numberDecimal|numberSigned" />
 
             <EditText
-                android:id="@+id/editTextNumberSigned3"
+                android:id="@+id/ed3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="numberSigned" />
+                android:inputType="numberDecimal|numberSigned" />
 
         </LinearLayout>
 
@@ -62,10 +62,10 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="RandomN"
                 android:text="Random" />
 
             <Space
@@ -82,7 +82,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="387dp"
+            android:layout_height="60dp"
             android:orientation="horizontal">
 
             <Space
@@ -91,7 +91,6 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button3"
                 android:layout_width="254dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -101,6 +100,39 @@
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="65dp"
+                android:layout_height="79dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/t1"
+                android:layout_width="153dp"
+                android:layout_height="68dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/t2"
+                android:layout_width="153dp"
+                android:layout_height="68dp"
+                android:layout_weight="1" />
+
+            <Space
+                android:layout_width="60dp"
+                android:layout_height="74dp"
                 android:layout_weight="1" />
         </LinearLayout>
 
