--- a/app/src/main/res/layout/activity_pitaron.xml
+++ b/app/src/main/res/layout/activity_pitaron.xml
@@ -6,4 +6,91 @@
     android:layout_height="match_parent"
     tools:context=".pitaron">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="25dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="47dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/t1"
+                android:layout_width="146dp"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/t2"
+                android:layout_width="146dp"
+                android:layout_height="match_parent" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="35dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="244dp"
+            android:orientation="horizontal">
+
+            <WebView
+                android:id="@+id/wV"
+                android:layout_width="305dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="35dp"
+                android:layout_height="54dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:layout_width="140dp"
+                android:layout_height="38dp"
+                android:layout_weight="1"
+                android:onClick="returnn"
+                android:text="Return back" />
+
+            <Space
+                android:layout_width="193dp"
+                android:layout_height="55dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="27dp"
+            android:layout_height="114dp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
